# skriptendruck-modern

./: .abacus.donotdelete  .credentials.enc  .env.example  .gitignore  QUICKSTART.md  README.md  README_DASHBOARD.md  README_eventually.md  Skriptendruck.bat  Skriptendruck.ps1  Skriptendruck_Setup.bat  Skriptendruck_Setup.ps1  UPDATE_v2.1.md  ZUSAMMENFASSUNG.md  install_service.ps1  pyproject.toml  remove_papercut_autostart.ps1  secedit.jfm  service_config.json  setup_papercut_autostart.ps1  start_dashboard.bat  start_dashboard.ps1  uninstall_service.ps1
data/: binding_sizes.json
docs/: CLI_VS_DASHBOARD.md  LDAP_HS_REGENSBURG.md  PAPERCUT_SETUP.md  WINDOWS_DATABASE.md  WINDOWS_SERVICE_SETUP.md  migration_notes.md
src/skriptendruck/: __init__.py  __main__.py
src/skriptendruck/cli/: commands.py
src/skriptendruck/config/: __init__.py  credentials.py  logging.py  settings.py
src/skriptendruck/database/: __init__.py  models.py  service.py
src/skriptendruck/models/: __init__.py  order.py  pricing.py  user.py
src/skriptendruck/processing/: pipeline.py
src/skriptendruck/services/: __init__.py  excel_service.py  file_organizer.py  filename_parser.py  pdf_service.py  pricing_service.py  printing_service.py  user_service.py
src/skriptendruck/web/: __init__.py  app.py  auth.py  file_watcher.py
src/skriptendruck/web/routes/: __init__.py  api_routes.py  auth_routes.py  dashboard_routes.py
src/skriptendruck/web/static/css/: dashboard.css
src/skriptendruck/web/static/js/: dashboard.js
src/skriptendruck/web/templates/: base.html  dashboard.html  login.html  orders.html  statistics.html
tests/: test_file_organizer.py  test_filename_parser.py  test_ldap.py  test_pricing_service.py  test_user_service_ldap.py
