[tool.poetry]
name = "skriptendruck"
version = "3.0.0"
description = "Web-Dashboard für Skriptendruck - Fachschaft Maschinenbau OTH Regensburg"
authors = ["FSMB Regensburg"]
readme = "README.md"
packages = [{include = "skriptendruck", from = "src"}]

[tool.poetry.dependencies]
python = "^3.11"
# Core
pydantic = "^2.9"
pydantic-settings = "^2.6"
# PDF processing
pypdf = "^5.1"
reportlab = "^4.2"
PyMuPDF = "^1.24"
# LDAP Authentication
ldap3 = "^2.9"
# Encrypted Credentials
cryptography = "^43.0"
# Database
sqlalchemy = "^2.0"
# Excel Export
openpyxl = "^3.1"
xlsxwriter = "^3.2"
# Web Dashboard
fastapi = "^0.115"
uvicorn = {extras = ["standard"], version = "^0.32"}
jinja2 = "^3.1"
python-multipart = "^0.0.12"
itsdangerous = "^2.2"
# Utilities
python-dotenv = "^1.0"

[tool.poetry.group.dev.dependencies]
pytest = "^8.3"
black = "^24.10"
ruff = "^0.7"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.black]
line-length = 100
target-version = ['py311']

[tool.ruff]
line-length = 100
target-version = "py311"
